# DiplonDJTG

./: db.sqlite3  pyproject.toml
events/: settings.py  urls.py
eventsapp/: admin.py  models.py  views.py
eventsapp/migrations/: 0001_initial.py
eventsapp/serializers/: serializers.py
