[tool.poetry]
name = "partdjango"
version = "0.1.0"
description = ""
authors = ["nikitazucko <norel.prod@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.4"
djangorestframework = "^3.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
